[gd_scene load_steps=5 format=3 uid="uid://c61n454mtalop"]

[ext_resource type="Script" path="res://Scenes/main_menu.gd" id="1_b7igq"]
[ext_resource type="Texture2D" uid="uid://b0l56smwluwnb" path="res://Sprites/Background/Background.png" id="1_v721r"]
[ext_resource type="AudioStream" uid="uid://s5usfq34mhfx" path="res://Sprites/Audio/select.ogg" id="3_4etht"]
[ext_resource type="FontFile" uid="uid://dyn3yp6ol6py" path="res://Sprites/Font/clacon2.ttf" id="3_islcb"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b7igq")
game_scene = "res://Scenes/map.tscn"
settings_scene = "res://Scenes/settings_menu.tscn"

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_v721r")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 35
theme_override_constants/margin_bottom = 50

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="StartGame" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_islcb")
theme_override_font_sizes/font_size = 125
text = "Start game"

[node name="Settings" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_islcb")
theme_override_font_sizes/font_size = 125
text = "Settings"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_4etht")

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
